# getsubs

./: AGENTS.md  README.md  flake.nix  getsubs.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: check.yml
