[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getsubs"
version = "0.1.0"
description = "getsubs - A Python application"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    # Add runtime dependencies here
]

[project.scripts]
getsubs = "getsubs:main"

[project.optional-dependencies]
dev = [
    # Add development dependencies here
]
