[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getsubs"
version = "0.1.0"
description = "getsubs - download subtitles of videos"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "webvtt-py>=0.4.6",
]

[project.scripts]
getsubs = "getsubs:main"

[project.optional-dependencies]
dev = [
    # Add development dependencies here
]
